Se agregó un modelo de reserva en el archivo Reserva.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,10 +12,10 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>Columna 1</th>
-                            <th>Columna 2</th>
-                            <th>Columna 3</th>
-                            <th>Columna n</th>
+                            <th>Quien solicita la reserva</th>
+                            <th>Cuando la solicita</th>
+                            <th>Para cuando</th>
+                            <th>¿Cuál es el costo?</th>
                         </tr>
                     </thead>
                     <tbody id="">
